<resources>
    <string name="app_name">SIH</string>
    <string name="login">LOG IN</string>
    <string name="changelanguage">CHANGE APP LANGUAGE</string>
    <string name="phone">Phone Number</string>
    <string name="password">Password</string>
    <string name="signup">Not registered?</string>
    <string name="register">REGISTER</string>
    <string name="name">Name</string>
    <string name="refreshFuel">Refresh Fuel Level</string>
    <string name="forgotpwd">Forgot Password??</string>
    <string name="sendSms">Send SMS to emergency contact</string>
    <string name="checkPrice">Tap to check fuel price</string>
    <string name="estimateFuel">Estimate required fuel</string>
    <string name="mileage">Mileage of vehicle(km/l)</string>
    <string name="distance">Distance to be covered(km)</string>
    <string name="go">GO</string>
    <string name="findPumps">Find nearby petrol pumps</string>

</resources>
