<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="315dp"
    android:padding="20dp"
    android:focusableInTouchMode="true"

    android:orientation="vertical">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="#000">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff"
            android:drawableStart="@drawable/user"
            android:hint="@string/name"
            android:drawablePadding="15dp"

            android:ems="10"
            android:id="@+id/name"
            android:textColor="#000"
            android:textSize="20sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="#000">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff"
            android:drawableStart="@drawable/lock"
            android:hint="@string/phone"
            android:drawablePadding="15dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/phone"
            android:textColor="#000"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColorHint="#000">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#ffff"
            android:drawableStart="@drawable/lock"
            android:hint="@string/password"
            android:drawablePadding="15dp"
            android:inputType="textPassword"
            android:ems="10"
            android:id="@+id/password"
            android:textColor="#000"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        >
        <Button
            android:elevation="5dp"
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/register"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:textColor="@android:color/white"
            android:background="@drawable/bg_foe"
            android:textSize="18sp"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            android:textStyle="bold"
            android:textAlignment="center"
            />


    </FrameLayout>

</LinearLayout>